# postgresql-mcp-python

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-container.yml
infra/: deployment.yaml  ingressroute.yaml  middleware.yaml  namespace.yaml  secret.yaml  service.yaml
src/: app_context.py  db.py  main.py  settings.py
src/tools/: schema.py  select_query.py  write_query.py
